[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jorun"
version = "0.2.0"
authors = [
  { name="Paolo Infante", email="info@paoloinfante.it" },
]
description = "A customizable task runner"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML==6.0",
    "PySide6==6.5.0",
    "tinyioc==0.1.4",
    "psutil==5.9.5"
]

[project.scripts]
jorun = "jorun.main:main"

[project.urls]
"Homepage" = "https://github.com/paolo-projects/jorun"
"Bug Tracker" = "https://github.com/paolo-projects/jorun/issues"